unpackaged/main/default/objects/DocuSign_Document__c/DocuSign_Document__c.object-meta.xml
<CustomObject>
    <label>DocuSign Document</label>
    <nameField>
        <displayFormat>DD-{0000000}</displayFormat>
        <label>DocuSign Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>