unpackaged/main/default/objects/DocuSign_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investment Management Agreement</fullName>
            </value>
            <value>
                <fullName>IMA Exhibit A</fullName>
            </value>
            <value>
                <fullName>IMA Exhibit A.1</fullName>
            </value>
            <value>
                <fullName>IMA Exhibit B</fullName>
            </value>
            <value>
                <fullName>Concentration Acknowledgement</fullName>
            </value>
            <value>
                <fullName>Disclosure - Interval Funds</fullName>
            </value>
            <value>
                <fullName>Disclosure - BDC</fullName>
            </value>
            <value>
                <fullName>Disclosure - DPP</fullName>
            </value>
            <value>
                <fullName>Disclosure - Energy</fullName>
            </value>
            <value>
                <fullName>Disclosure - Fixed &amp; Fixed Indexed Annuities</fullName>
            </value>
            <value>
                <fullName>Disclosure - Insurance 1035 Exchange or Replacement</fullName>
            </value>
            <value>
                <fullName>Disclosure - Private BDC</fullName>
            </value>
            <value>
                <fullName>Disclosure - Private Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>