unpackaged/main/default/objects/DocuSign_Document__c/fields/Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DocuSign Documents (Joint Owner)</relationshipLabel>
    <relationshipName>DocuSign_Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>