unpackaged/main/default/objects/DocuSign_Document__c/fields/Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DocuSign Documents</relationshipLabel>
    <relationshipName>DocuSign_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>