unpackaged/main/default/objects/DocuSign_Document__c/fields/Send_to_Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Joint_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Joint Owner?</label>
    <type>Checkbox</type>
</CustomField>