unpackaged/main/default/objects/DocuSign_Document__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Type</label>
    <referenceTo>dfsle__EnvelopeConfiguration__c</referenceTo>
    <relationshipLabel>DocuSign Documents</relationshipLabel>
    <relationshipName>DocuSign_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>