unpackaged/main/default/objects/DocuSign_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Template_Type__c</columns>
    <columns>Send_to_Primary_Owner__c</columns>
    <columns>Send_to_Joint_Owner__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>